MDEV-10792: Assertion `thd->mdl_context.is_lock_owner ..

.. (MDL_key::TABLE, table->db, table->table_name, MDL_SHARED)'
failed in mysql_rm_table_no_locks

Reset error flag after temporary table has been
successfully dropped.